[ZEPPELIN-2648] Fix spark module build problem with scala-2.10 profile
*  remove scala version in spark2 profile , we should compose scala profile and spark profile to address scala and spark version
*  address scalaVersion evidently in maven-scala-plugin

details by ZEPPELIN-2648

[Bug Fix]

None

* https://issues.apache.org/jira/browse/ZEPPELIN-2648

execute below command and check whether the zeppelin-spark artifact is build based on specified scala  and spark version.

mvn clean package -Pscala-2.10 -Pspark-2.1

mvn clean package -Pscala-2.11 -Pspark-2.1

* Does the licenses files need update? No
* Is there breaking changes for older versions? No
* Does this needs documentation? No

Author: lichenyang <lichenyang@cmss.chinamobile.com>

Closes #2470 from reminia/zeppelin-2648 and squashes the following commits:

31c7aa5 [lichenyang] remove scala version in the spark-dependencies pom
fb57494 [lichenyang] [ZEPPELIN-2648] Fix spark module build problem with scala-2.10 profile

(cherry picked from commit 3f9ef6e6272612f0e15f33459c345392dcab7c56)
Signed-off-by: Lee moon soo <moon@apache.org>

--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -411,6 +411,7 @@
         <artifactId>maven-scala-plugin</artifactId>
         <version>${plugin.scala.version}</version>
         <configuration>
+            <scalaVersion>${scala.version}</scalaVersion>
           <excludes>
             <exclude>**/ZeppelinR.scala</exclude>
             <exclude>**/SparkRBackend.scala</exclude>
@@ -519,7 +520,6 @@
         <spark.version>2.0.2</spark.version>
         <protobuf.version>2.5.0</protobuf.version>
         <py4j.version>0.10.3</py4j.version>
-        <scala.version>2.11.8</scala.version>
       </properties>
     </profile>
 
@@ -532,7 +532,6 @@
         <spark.version>2.1.0</spark.version>
         <protobuf.version>2.5.0</protobuf.version>
         <py4j.version>0.10.4</py4j.version>
-        <scala.version>2.11.8</scala.version>
       </properties>
     </profile>
 
