--- a/zeppelin-web/package.json
+++ b/zeppelin-web/package.json
@@ -72,12 +72,14 @@
     "grunt-wiredep": "~2.0.0",
     "html-webpack-plugin": "^2.24.1",
     "imports-loader": "^0.7.1",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.5.2",
     "karma": "~1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "~1.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^1.8.1",
     "load-grunt-tasks": "^0.4.0",
     "ng-annotate-loader": "^0.2.0",
