--- a/zeppelin-web/package.json
+++ b/zeppelin-web/package.json
@@ -19,6 +19,7 @@
     "dev:watch": "grunt watch-webpack-dev",
     "dev": "npm-run-all --parallel dev:server lint:watch dev:watch",
     "test:watch": "karma start karma.conf.js --single-run=false",
+    "e2e": "protractor protractor.conf.js",
     "test": "karma start karma.conf.js"
   },
   "dependencies": {
@@ -75,6 +76,7 @@
     "imports-loader": "^0.7.1",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^4.1.1",
     "karma": "~1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "~1.0.2",
@@ -86,6 +88,7 @@
     "ng-annotate-loader": "^0.2.0",
     "npm-run-all": "^3.1.2",
     "postcss-loader": "^1.2.1",
+    "protractor": "^5.1.2",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
     "string-replace-webpack-plugin": "^0.1.3",
