chore: Ingnore protractor conf in RAT

--- a/pom.xml
+++ b/pom.xml
@@ -990,6 +990,7 @@
               <exclude>**/.bowerrc</exclude>
               <exclude>.editorconfig</exclude>
               <exclude>.eslintrc</exclude>
+              <exclude>protractor.conf.js</exclude>
               <exclude>**/.tmp/**</exclude>
               <exclude>**/target/**</exclude>
               <exclude>**/node/**</exclude>
