--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ matrix:
 
     # Run e2e tests (in zeppelin-web)
     - jdk: "oraclejdk7"
-      env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pweb-e2e -Pscala-2.11" BUILD_FLAG="package -DskipTests -Pbuild-distr -DskipRat" TEST_FLAG="verify -Pusing-packaged-distr -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_MODULES="-pl !spark,!spark-dependencies,!zeppelin-web,!zeppelin-jupyter,!zeppelin-distribution" TEST_PROJECTS="-Dtests.to.exclude=**/org/apache/zeppelin/**/*.java -DtagsToInclude=None -DfailIfNoTests=false"
+      env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pweb-e2e -Pscala-2.11" BUILD_FLAG="package -DskipTests -Pbuild-distr -DskipRat" TEST_FLAG="verify -Pusing-packaged-distr -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_MODULES="-pl zeppelin-web"  TEST_PROJECTS=""
 
     # Test core modules
     # Several tests were excluded from this configuration due to the following issues:
