--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ matrix:
 
     # Run e2e tests (in zeppelin-web)
     - jdk: "oraclejdk7"
-      env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pweb-e2e -Pscala-2.11" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_PROJECTS=""
+      env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pweb-e2e -Pscala-2.11" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_PROJECTS="-pl .,!zeppelin-interpreter,!zeppelin-zengine,!zeppelin-server,!zeppelin-display,!spark-dependencies,!spark,!angular,!markdown,!shell,!zeppelin-jupyter,!zeppelin-distribution"
 
     # Test core modules
     # Several tests were excluded from this configuration due to the following issues:
