--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,12 @@ cache:
     -  zeppelin-web/bower_components
 
 addons:
+  chrome: stable
   apt:
     sources:
-    - google-chrome
     - r-packages-precise
     packages:
     - r-base-dev
-    - google-chrome-stable
 
 env:
   global:
@@ -49,7 +48,7 @@ matrix:
 
     # Run e2e tests (in zeppelin-web)
     - jdk: "oraclejdk7"
-      env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pscala-2.11" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_MODULES="-pl zeppelin-web" TEST_PROJECTS="-Pweb-e2e"
+      env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pscala-2.11" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_MODULES="-pl zeppelin-web" TEST_PROJECTS="-Pweb-e2e -Dorg.slf4j.simpleLogger.defaultLogLevel=info"
 
     # Test core modules
     # Several tests were excluded from this configuration due to the following issues:
