--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ matrix:
 
     # Run e2e tests (in zeppelin-web)
     - jdk: "oraclejdk7"
-      env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pscala-2.11" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_MODULES="-pl zeppelin-web" TEST_PROJECTS="-Pweb-e2e -Dorg.slf4j.simpleLogger.defaultLogLevel=info"
+      env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pscala-2.11" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_MODULES="-pl zeppelin-web" TEST_PROJECTS="-Pweb-e2e"
 
     # Test core modules
     # Several tests were excluded from this configuration due to the following issues:
@@ -123,7 +123,7 @@ before_script:
   - if [[ -n $TEST_MODULES ]]; then export CHROME_BIN=chromium-browser; export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; sleep 3; fi
 
 script:
-  - if [[ -n $TEST_MODULES ]]; then export MODULES=$TEST_MODULES; fi
+  - if [[ -n $TEST_MODULES ]]; then export MODULES="${TEST_MODULES} -X"; fi
   - echo "mvn $TEST_FLAG $MODULES $PROFILE -B $TEST_PROJECTS"
   - mvn $TEST_FLAG $MODULES $PROFILE -B $TEST_PROJECTS
 
