--- a/.travis.yml
+++ b/.travis.yml
@@ -123,7 +123,7 @@ before_script:
   - if [[ -n $TEST_MODULES ]]; then export CHROME_BIN=chromium-browser; export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; sleep 3; fi
 
 script:
-  - if [[ -n $TEST_MODULES ]]; then export MODULES="${TEST_MODULES} -X"; fi
+  - if [[ -n $TEST_MODULES ]]; then export MODULES="${TEST_MODULES}"; fi
   - echo "mvn $TEST_FLAG $MODULES $PROFILE -B $TEST_PROJECTS"
   - mvn $TEST_FLAG $MODULES $PROFILE -B $TEST_PROJECTS
 
