--- a/.travis.yml
+++ b/.travis.yml
@@ -120,7 +120,11 @@ before_script:
   - echo "export SPARK_HOME=`pwd`/spark-$SPARK_VER-bin-hadoop$HADOOP_VER" > conf/zeppelin-env.sh
   - echo "export ZEPPELIN_HELIUM_REGISTRY=helium" >> conf/zeppelin-env.sh
   - tail conf/zeppelin-env.sh
-  - export DBUS_SESSION_BUS_ADDRESS=/dev/null; export CHROME_BIN=chromium-browser; export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; sleep 3;
+#  - export DBUS_SESSION_BUS_ADDRESS=/dev/null
+  - export CHROME_BIN=google-chrome-stable;
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
 
 script:
   - if [[ -n $TEST_MODULES ]]; then export MODULES="${TEST_MODULES}"; fi
