--- a/.travis.yml
+++ b/.travis.yml
@@ -122,7 +122,7 @@ before_script:
   - tail conf/zeppelin-env.sh
   - export CHROME_BIN=/usr/bin/google-chrome-beta
   - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - sh -e /etc/init.d/xvfb start &
   - sleep 3
 
 script:
