--- a/.travis.yml
+++ b/.travis.yml
@@ -124,6 +124,7 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start &
   - sleep 3
+  - ls /usr/bin
 
 script:
   - if [[ -n $TEST_MODULES ]]; then export MODULES="${TEST_MODULES}"; fi
