--- a/.travis.yml
+++ b/.travis.yml
@@ -31,11 +31,10 @@ cache:
 addons:
   apt:
     sources:
-    - google-chrome
     - r-packages-trusty
     packages:
     - r-base-dev
-    - google-chrome-stable
+    - google-chrome-beta
 
 env:
   global:
@@ -122,7 +121,7 @@ before_script:
   - echo "export SPARK_HOME=`pwd`/spark-$SPARK_VER-bin-hadoop$HADOOP_VER" > conf/zeppelin-env.sh
   - echo "export ZEPPELIN_HELIUM_REGISTRY=helium" >> conf/zeppelin-env.sh
   - tail conf/zeppelin-env.sh
-  - export CHROME_BIN=/usr/bin/google-chrome-stable
+  - export CHROME_BIN=/usr/bin/google-chrome-beta
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start &
   - sleep 3
