--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@
 
 language: java
 
-dist: trusty
-sudo: required
+sudo: false
 
 cache:
   apt: true
@@ -29,12 +28,12 @@ cache:
     -  zeppelin-web/bower_components
 
 addons:
+  chrome: beta
   apt:
     sources:
-    - r-packages-trusty
+    - r-packages-precise
     packages:
     - r-base-dev
-    - google-chrome-beta
 
 env:
   global:
