--- a/.travis.yml
+++ b/.travis.yml
@@ -123,6 +123,7 @@ before_script:
   - echo "export ZEPPELIN_HELIUM_REGISTRY=helium" >> conf/zeppelin-env.sh
   - tail conf/zeppelin-env.sh
   - export CHROME_BIN=chromium-browser
+  - $CHROME_BIN --version
   - sleep 3
   - echo "MAVEN_OPTS='-Xms1024M -Xmx2048M -XX:MaxPermSize=1024m -XX:-UseGCOverheadLimit -Dorg.slf4j.simpleLogger.defaultLogLevel=info'" > ~/.mavenrc
 
