--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,6 @@ cache:
     -  zeppelin-web/bower_components
 
 addons:
-  chrome: stable
   apt:
     sources:
     - r-packages-precise
@@ -47,8 +46,18 @@ matrix:
 #      env: SCALA_VER="2.11" SPARK_VER="2.0.2" HADOOP_VER="2.6" PROFILE="-Prat" BUILD_FLAG="clean" TEST_FLAG="org.apache.rat:apache-rat-plugin:check" TEST_PROJECTS=""
 
     # Run e2e tests (in zeppelin-web)
-    - jdk: "oraclejdk7"
+    - os: linux
+      sudo: false
+      dist: trusty
+      jdk: "oraclejdk8"
       env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pscala-2.11" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_MODULES="-pl zeppelin-web" TEST_PROJECTS="-Pweb-e2e"
+      addons:
+        apt:
+          sources:
+          - r-packages-trusty
+          packages:
+          - google-chrome-stable
+          - r-base-dev
 
     # Test core modules
     # Several tests were excluded from this configuration due to the following issues:
