--- a/python/pom.xml
+++ b/python/pom.xml
@@ -39,6 +39,8 @@
         **/PythonInterpreterPandasSqlTest.java,
         **/PythonInterpreterMatplotlibTest.java
     </python.test.exclude>
+    <pypi.repo.url>https://pypi.python.org/packages</pypi.repo.url>
+    <python.py4j.repo.folder>/64/5c/01e13b68e8caafece40d549f232c9b5677ad1016071a48d04cc3895acaa3</python.py4j.repo.folder>
   </properties>
 
   <dependencies>
@@ -107,7 +109,7 @@
             <phase>package</phase>
             <goals><goal>download-single</goal></goals>
             <configuration>
-              <url>https://pypi.python.org/packages/64/5c/01e13b68e8caafece40d549f232c9b5677ad1016071a48d04cc3895acaa3</url>
+              <url>${pypi.repo.url}${python.py4j.repo.folder}</url>
               <fromFile>py4j-${python.py4j.version}.zip</fromFile>
               <toFile>${project.build.directory}/../../interpreter/python/py4j-${python.py4j.version}.zip</toFile>
             </configuration>
