fix: run unit test only when web-e2e enabled

--- a/zeppelin-web/pom.xml
+++ b/zeppelin-web/pom.xml
@@ -103,7 +103,7 @@
             </goals>
             <phase>test</phase>
             <configuration>
-              <skip>${web.e2e.enabled}</skip>
+              <skip>${web.e2e.disabled}</skip>
               <arguments>run test</arguments>
             </configuration>
           </execution>
