--- a/r/pom.xml
+++ b/r/pom.xml
@@ -127,7 +127,7 @@
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
-      <version>${scala.version}</version>
+      <version>${r.scala.version}</version>
       <scope>provided</scope>
     </dependency>
 
