--- a/ignite/pom.xml
+++ b/ignite/pom.xml
@@ -32,6 +32,7 @@
   <name>Zeppelin: Apache Ignite interpreter</name>
 
   <properties>
+    <ignite.scala.version>${scala.version}</ignite.scala.version>
     <ignite.version>1.9.0</ignite.version>
   </properties>
 
@@ -70,19 +71,19 @@
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
-      <version>${scala.version}</version>
+      <version>${ignite.scala.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-compiler</artifactId>
-      <version>${scala.version}</version>
+      <version>${ignite.scala.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-reflect</artifactId>
-      <version>${scala.version}</version>
+      <version>${ignite.scala.version}</version>
     </dependency>
 
     <dependency>
