--- a/.travis.yml
+++ b/.travis.yml
@@ -114,6 +114,7 @@ before_script:
   - if [[ -n $LIVY_VER ]]; then export SPARK_HOME=`pwd`/spark-$SPARK_VER-bin-hadoop$HADOOP_VER; fi
   - echo "export SPARK_HOME=`pwd`/spark-$SPARK_VER-bin-hadoop$HADOOP_VER" > conf/zeppelin-env.sh
   - echo "export ZEPPELIN_HELIUM_REGISTRY=helium" >> conf/zeppelin-env.sh
+  - cp conf/shiro.ini.template conf/shiro.ini
   - tail conf/zeppelin-env.sh
 
 script:
