--- a/r/pom.xml
+++ b/r/pom.xml
@@ -38,6 +38,7 @@
     <!--library versions-->
     <spark.version>1.4.1</spark.version>
     <jsoup.version>[1.8.0,)</jsoup.version>
+    <r.scala.version>${scala.version}</r.scala.version>
 
     <!--test library versions-->
     <datanucleus.rdbms.version>3.2.9</datanucleus.rdbms.version>
