--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
     <node.version>v6.9.1</node.version>
     <yarn.version>v0.18.1</yarn.version>
     <npm.version>4.2.0</npm.version>
-    <plugin.frontned.version>1.3</plugin.frontned.version>
+    <plugin.frontend.version>1.3</plugin.frontend.version>
 
     <!-- common library versions -->
     <slf4j.version>1.7.10</slf4j.version>
