--- a/conf/zeppelin-env.cmd.template
+++ b/conf/zeppelin-env.cmd.template
@@ -76,5 +76,4 @@ REM set ZEPPELIN_SPARK_MAXRESULT       REM Max number of Spark SQL result to dis
 REM Zepl connection configuration
 REM
 REM set ZEPL_API_ADDRESS	             REM Refers to the address of the Zepl service in use
-REM set ZEPPELINHUB_API_TOKEN          REM Refers to the Zeppelin instance token of the user
-REM set ZEPPELINHUB_USER_KEY           REM Optional, when using Zeppelin with authentication.
+REM set ZEPL_API_TOKEN                 REM Refers to the Zeppelin instance token of the user
