--- a/conf/zeppelin-env.sh.template
+++ b/conf/zeppelin-env.sh.template
@@ -94,8 +94,7 @@
 
 #### Zepl connection configuration ####
 # export ZEPL_API_ADDRESS		# Refers to the address of the Zepl service in use
-# export ZEPPELINHUB_API_TOKEN			# Refers to the Zeppelin instance token of the user
-# export ZEPPELINHUB_USER_KEY			# Optional, when using Zeppelin with authentication.
+# export ZEPL_API_TOKEN			# Refers to the Zeppelin instance token of the user
 
 #### Zeppelin impersonation configuration
 # export ZEPPELIN_IMPERSONATE_CMD       # Optional, when user want to run interpreter as end web user. eg) 'sudo -H -u ${ZEPPELIN_IMPERSONATE_USER} bash -c '
