--- a/.travis.yml
+++ b/.travis.yml
@@ -51,13 +51,13 @@ matrix:
     # also, can't use JDK 7 in trusty: https://github.com/travis-ci/travis-ci/issues/7884
     - os: linux
       sudo: false
-      dist: trusty
+      dist: precise
       jdk: "oraclejdk8"
       env: WEB_E2E="true" SCALA_VER="2.11" SPARK_VER="2.1.0" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pscala-2.11" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_MODULES="-pl zeppelin-web" TEST_PROJECTS="-Pweb-e2e"
       addons:
         apt:
           sources:
-          - r-packages-trusty
+          - r-packages-precise
           packages:
           - google-chrome-stable
           - r-base-dev
