add refresh logic

--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -188,6 +188,30 @@
   e.g. `hdfs://localhost:8020`, or `file:///`
   </description>
 </property>
+
+<property>
+  <name>kerberos.principal</name>
+  <value>zeppelin@EXAMPLE.COM</value>
+  <description>The principal name to load from the keytab</description>
+</property>
+<property>
+  <name>kerberos.keytab</name>
+  <value>/etc/security/keytabs/zeppelin.server.kerberos.keytab</value>
+  <description>The path to the keytab file</description>
+</property>
+
+<property>
+  <name>kerberos.refresh.interval</name>
+  <value>1d</value>
+  <description>(optional) The refresh interval for Kerberos ticket. The default value is 1d.</description>
+</property>
+<property>
+  <name>kinit.fail.threshold</name>
+  <value>5</value>
+  <description>(optional) How many times should kinit retry. The default value is 5.</description>
+</property>
+
+
 -->
 
 <!-- For connecting your Zeppelin with ZeppelinHub -->
