[MINOR][Code Refactoring] Configuration name change for keytab and principal used for FileSystemNotebookRepo
### What is this PR for?

Trivial change for configuration name change.

### What type of PR is it?
[Refactoring]

### Todos
* [ ] - Task

### What is the Jira issue?
* No jira created

### How should this be tested?
* First time? Setup Travis CI as described on https://zeppelin.apache.org/contribution/contributions.html#continuous-integration
* Strongly recommended: add automated unit tests for any new or changed behavior
* Outline any manual steps to test the PR here.

### Screenshots (if appropriate)

### Questions:
* Does the licenses files need update? No
* Is there breaking changes for older versions? No
* Does this needs documentation? No

Author: Jeff Zhang <zjffdu@apache.org>

Closes #2620 from zjffdu/minor_refactoring and squashes the following commits:

c68ce76 [Jeff Zhang] [MINOR][Code Refactoring] Configuration name change for keytab and principal used for FileSystemNotebookRepo

--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -181,13 +181,13 @@
 </property>
 
 <property>
-  <name>zeppelin.hdfs.keytab</name>
+  <name>zeppelin.server.kerberos.keytab</name>
   <value></value>
   <description>keytab for accessing kerberized hdfs</description>
 </property>
 
 <property>
-  <name>zeppelin.hdfs.principal</name>
+  <name>zeppelin.server.kerberos.principal</name>
   <value></value>
   <description>principal for accessing kerberized hdfs</description>
 </property>
