Added feature for importing ipynb notebooks

--- a/zeppelin-server/pom.xml
+++ b/zeppelin-server/pom.xml
@@ -110,6 +110,12 @@
     </dependency>
 
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>zeppelin-jupyter</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
